# Chain-Tale

./: README.md  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/archive/: page.tsx
app/ideas/: page.tsx
app/profile/: page.tsx
app/settings/: page.tsx
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: archive.py  auth.py  badges.py  leaderboard.py  stories.py  tags.py
backend/app/core/: config.py  security.py
backend/app/db/: mongo.py
backend/app/schemas/: auth.py  badge.py  common.py  leaderboard.py  story.py  tag.py  user.py
backend/app/services/: badge_service.py  leaderboard_service.py  story_service.py  tag_service.py  user_service.py
backend/app/tasks/: scheduler.py
components/archive/: archived-story-card.tsx  archived-story-viewer.tsx  story-archives.tsx
components/auth/: login-form.tsx  register-form.tsx
components/ideas/: idea-request-card.tsx  idea-response.tsx  new-idea-request-form.tsx
components/layout/: footer.tsx  navigation.tsx  page-header.tsx
components/profile/: profile-edit-form.tsx  user-contributions.tsx  user-friends.tsx  user-profile-header.tsx  user-profile.tsx  user-stories.tsx
components/settings/: settings-form.tsx
components/story/: contribution-form.tsx  new-story-form.tsx  story-chain-card.tsx  story-dashboard.tsx  (+2 more)
docs/: architecture.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
(+38 files in other folders)
